# webchat_backend

./: .gitignore  Dockerfile  docker-compose.yml  installation.py  pyproject.toml  render.yaml  requirements-min.txt  requirements.txt  tetete.none
WebChat/: asgi.py  settings.py  urls.py
chat/: admin.py  asgi.py  consumer.py  models.py  queries.sql  requests.json  serializers.py  urls.py  utils.py  views.py
chat/migrations/: 0001_initial.py
